tests/semantic_errors/testcase02.c
// Invalid type in condition

int main(void){
    if("a"){
    }
    else{
    }
    return 0;
}